# fast_api

./: main.py  pyproject.toml
app/: database.py  main.py  models.py  schemas.py  utils.py
app/routers/: post.py  user.py
