[tool.poetry]
name = "fast_api"
version = "0.1.0"
description = ""
authors = ["Kirill Ivanov <hoprosx@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
psycopg = {extras = ["binary"], version = "^3.1.18"}
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.27.1"}
SQLAlchemy = "^2.0.28"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
